--- a/package.json
+++ b/package.json
@@ -16,17 +16,19 @@
     "@mui/joy": "^5.0.0-alpha.81",
     "@mui/material": "^5.13.1",
     "@mui/styled-engine-sc": "^5.12.0",
+    "@reduxjs/toolkit": "^2.2.3",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
     "bootstrap": "^5.2.3",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
     "js-cookie": "^3.0.5",
-    "next": "13.4.2",
+    "next": "^14.2.3",
     "postcss": "8.4.23",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-icons": "^4.8.0",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.11.2",
     "styled-components": "^5.3.10",
     "tailwindcss": "3.3.2"
