--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "react-icons": "^4.8.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.11.2",
-    "styled-components": "^5.3.10",
-    "tailwindcss": "3.3.2"
+    "styled-components": "^5.3.10"
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.4.3"
   }
 }
