--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.11.16",
     "@mui/joy": "^5.0.0-alpha.81",
-    "@mui/material": "^5.13.1",
+    "@mui/lab": "^5.0.0-alpha.170",
+    "@mui/material": "^5.15.17",
     "@mui/styled-engine-sc": "^5.12.0",
     "@reduxjs/toolkit": "^2.2.3",
     "autoprefixer": "10.4.14",
