--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-icons": "^4.8.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.11.2",
+    "sharp": "^0.33.3",
     "styled-components": "^5.3.10"
   },
   "devDependencies": {
