--- a/package.json
+++ b/package.json
@@ -34,7 +34,10 @@
     "sharp": "^0.33.3",
     "styled-components": "^5.3.10"
   },
+  
   "devDependencies": {
     "tailwindcss": "^3.4.3"
+  },  "engines": {
+    "node": ">=18.17.0"
   }
 }
